blog, blog_api skeleton, model mashing

--- a/django/product/templates/product/product_list.html
+++ b/django/product/templates/product/product_list.html
@@ -1,4 +1,4 @@
-{% extends "simple.html" %}
+{% extends "base.html" %}
 {% block title %}Product List{% endblock %}
 <ol>
     <li>{{ object.sku }}</li>
